<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">统一认证融合版</string>
    <string name="action_settings">Settings</string>
    <string name="umc_lable">SDK-API</string>
    <string name="none_login1">隐式获取token</string>
    <string name="layout_login">本机号码一键登录</string>
    <string name="outh_login">短信验证码登录</string>
    <string name="pre_getphone">预取号</string>
    <string name="umc_get_user_info">获取用户信息</string>
    <string name="user_authorization">获取户授权信息</string>
    <string name="logout_authorization">注销账号</string>
    <string name="order_page">订购页面</string>
    <string name="select_user_state">查询用户状态</string>
    <string name="select_sim_state">查询sim卡状态</string>
    <string name="select_mobilenumberBill">话费及流量查询</string>
    <string name="verify_mobileNumber">本机号码校验</string>
    <string name="isTest">是否测试线</string>
    <string name="switch_sms_login">短信登录开关</string>
    <string name="umcsdk_test">  测试线</string>
    <string name="umcsdk_grey">  灰度</string>
    <string name="umcsdk_product">  现网</string>

</resources>